<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64B5F6"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.PaymentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#5C6BC0">

        <TextView
            android:id="@+id/payment_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen"
            android:padding="8dp"
            android:textSize="24sp"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/payment_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:layout_gravity="right"
            android:layout_toRightOf="@id/payment_screen"/>
    </RelativeLayout>


    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/payment_screen_description"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/android_api"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/android_learn_api"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/api_url"
        />

</LinearLayout>
