<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#90CAF9"
    tools:context="com.example.android.musicalstructure.AboutUsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_us_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_screen"
            android:padding="8dp"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/about_us_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:layout_gravity="right"
            android:layout_toRightOf="@id/about_us_screen"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:background="#1565C0"
        android:textColor="#FFFFFF"
        android:text="@string/about_us_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="32sp"
        android:padding="8dp"
        android:text="@string/about_us_text"/>
</LinearLayout>
