<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.LibraryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#D1C4E9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/library_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_screen"
                android:padding="8dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/library_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu"
                android:layout_gravity="right"
                android:layout_toRightOf="@id/library_screen"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_screen_description"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:background="#9575CD"/>

        <LinearLayout
            android:id="@+id/first_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/under_the_bridge"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/give_it_away"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/breaking_the_girl"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/californication"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/scar_tissue"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sixth_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/soult_to_squeeze"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seventh_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/other_side"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/eighth_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/suck_my_kiss"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ninth_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/by_the_way"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tenth_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/red_hot_chili_peppers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/parallel_universe"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
