<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64B5F6"
    tools:context="com.example.android.musicalstructure.PlaylistsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playlist_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_screen"
                android:padding="8dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/playlist_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu"
                android:layout_gravity="right"
                android:layout_toRightOf="@id/playlist_screen"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:textSize="16sp"
            android:background="#1976D2"
            android:textColor="#FFFFFF"
            android:text="@string/now_playing_description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/love_playlist"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="32dp"
                    android:src="@drawable/red_hot_chili_peppers"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/love_playlist"
                    android:layout_marginTop="-24dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/workout_playlist"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="32dp"
                    android:src="@drawable/red_hot_chili_peppers"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/workout_playlist"
                    android:layout_marginTop="-24dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/road_trip_playlist"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="32dp"
                    android:src="@drawable/red_hot_chili_peppers"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/road_trip_playlist"
                    android:layout_marginTop="-24dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chill_playlist"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="32dp"
                    android:src="@drawable/red_hot_chili_peppers"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/chill_playlist"
                    android:layout_marginTop="-24dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
