<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BBDEFB"
    tools:context="com.example.android.musicalstructure.NowPlayingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/now_playing_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_screen"
            android:padding="8dp"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/now_playing_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:layout_gravity="right"
            android:layout_toRightOf="@id/now_playing_screen"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:background="#9575CD"
        android:textColor="#FFFFFF"
        android:text="@string/now_playing_description"/>

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/red_hot_chili_peppers"
        android:layout_margin="16dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1976D2">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/rewind"
            android:background="#FFFFFF"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/circled_play"
            android:background="#FFFFFF"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fast_forward"
            android:background="#FFFFFF"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/buy_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/buy"
        android:text="@string/buy_now"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
